# seccloud

./: .gitignore  .pre-commit-config.yaml  .prettierignore  AGENTS.md  CONTRIBUTING.md  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
.project/: README.md
.project/adr/: 0001-poc-filesystem-substrate.md  0002-demo-postgres-and-react-surface.md
.project/engineering/: coding-principles.md  testing-guide.md
.project/planning/: README.md  coding-sequence.md  implementation-status.md  m00-execution-log.md  m00-implementation-plan.md  m00-test-retrospective.md  m01-execution-log.md  m01-implementation-plan.md  m01-test-retrospective.md  m02-execution-log.md  m02-implementation-plan.md  m02-test-retrospective.md  m03-execution-log.md  m03-implementation-plan.md  m03-test-retrospective.md  m04-execution-log.md  m04-implementation-plan.md  m04-test-retrospective.md  m05-execution-log.md  m05-implementation-plan.md  m05-test-retrospective.md
.project/spec/: cumulative-surface.md  m00.md  m01.md  m02.md  m03.md  m04.md  m05.md  not-building.md  product-contract.md  roadmap.md
.project/templates/: adr-template.md  execution-log-template.md  implementation-plan-template.md  spec-template.md  status-review-template.md  test-retrospective-template.md
examples/poc/: README.md
project/: README.md  m0_analysis_results.json
project/adr/: 0001-poc-filesystem-substrate.md  0002-demo-postgres-and-react-surface.md  0003-worker-separated-data-plane.md  0004-lake-layout-and-manifest-contract.md  0005-hot-event-index-contract.md  0006-stable-identity-contract.md
project/engineering/: coding-principles.md  testing-guide.md
project/plan/: README.md  demo-reliability-plan.md  event-search-engine-memo.md  feature-schema-v1.md  m0-ml-validation.md  m0-results.md  m1-ingestion.md  m2-feature-engineering.md  m3-scoring-pipeline.md  m4-gap-audit.md  m4-query-and-ux.md  m5-byoc-operations.md  m6-scale-and-multicloud.md  model-artifact-schema-v1.md  normalized-event-schema-v1.md
project/planning/: README.md  coding-sequence.md  data-plane-agent-workstreams.md  implementation-status.md  m00-execution-log.md  m00-implementation-plan.md  m00-test-retrospective.md  m01-execution-log.md  m01-implementation-plan.md  m01-test-retrospective.md  m02-execution-log.md  m02-implementation-plan.md  m02-test-retrospective.md  m03-execution-log.md  m03-implementation-plan.md  m03-test-retrospective.md  m04-execution-log.md  m04-implementation-plan.md  m04-test-retrospective.md  m05-execution-log.md  m05-implementation-plan.md  m05-test-retrospective.md
project/planning/workstreams/: ws03-identity-contract.md  (+10 more)
project/spec/: cumulative-surface.md  hot-event-index-contract.md  identity-contract.md  lake-contract.md  m00.md  m01.md  m02.md  m03.md  m04.md  m05.md  not-building.md  product-contract.md  roadmap.md
project/templates/: adr-template.md  execution-log-template.md  implementation-plan-template.md  spec-template.md  status-review-template.md  test-retrospective-template.md
rust/: Cargo.toml
rust/crates/seccloud-collector/: Cargo.toml
rust/crates/seccloud-collector/src/: checkpoint.rs  collector.rs  lib.rs  main.rs  runner.rs  submit.rs
rust/crates/seccloud-collector/src/collectors/: github.rs  gworkspace.rs  mod.rs  okta.rs  snowflake.rs
rust/crates/seccloud-collector/tests/: runner_integration.rs
rust/crates/seccloud-ingestion/: Cargo.toml
rust/crates/seccloud-ingestion/sources/: github.toml  gworkspace.toml  okta.toml  snowflake.toml
rust/crates/seccloud-ingestion/src/: auth.rs  config.rs  detector.rs  event_index.rs  feature_runtime.rs  features.rs  ingest.rs  lib.rs  local_runtime.rs  main.rs  model_runtime.rs  model_scoring.rs  normalize.rs  projector.rs  routes.rs  runtime.rs  service.rs  service_runtime.rs  tests.rs  validate.rs  worker.rs
rust/crates/seccloud-lake/: Cargo.toml
rust/crates/seccloud-lake/src/: accepted_batch.rs  batch_writer.rs  intake_queue.rs  key.rs  lib.rs  manifest.rs  object_store.rs  schema.rs  sink.rs
rust/crates/seccloud-lake/tests/: normalization_parity.rs
rust/crates/seccloud-lake/tests/fixtures/normalization/: github_archive_download.json  github_missing_resource_id.json  gworkspace_share_external.json  okta_login.json  okta_unsupported_event_type.json  snowflake_export.json
rust/crates/seccloud-loadtest/: Cargo.toml
rust/crates/seccloud-loadtest/src/: main.rs
rust/crates/seccloud-pipeline/: Cargo.toml
rust/crates/seccloud-pipeline/src/: chain.rs  context.rs  envelope.rs  error.rs  lib.rs  testing.rs  transform.rs
rust/crates/seccloud-pipeline/src/transforms/: buffer.rs  dead_letter.rs  fanout.rs  filter.rs  map.rs  mod.rs  passthrough.rs
scripts/: e2e-smoke-test.sh  generate_openapi.py  m0-analysis.py  m0_analysis.py  normalization-parity-oracle.py  normalization_parity_oracle.py  onnx_score_batch.py  quickwit-smoke-test.sh
src/seccloud/: __init__.py  __main__.py  api.py  api_models.py  canonical_event_store.py  cli.py  collectors.py  contracts.py  contrastive_model.py  defaults.py  demo_api.py  demo_postgres.py  demo_projection.py  demo_stream.py  detection_context.py  evaluation.py  event_query.py  feature_contract.py  feature_lake.py  feature_pipeline.py  ids.py  investigation.py  local_postgres.py  local_quickwit.py  ml_scoring.py  model_artifact.py  model_training.py  object_store.py  onboarding.py  onnx_export.py  pipeline.py  projection_store.py  quickwit_client.py  quickwit_index.py  quickwit_smoke.py  reports.py  runtime_status.py  runtime_stream.py  scoring.py  source_pack.py  (+7 more)
tests/: test_collectors.py  test_contrastive_model.py  test_evaluation.py  test_feature_pipeline.py  test_hot_event_index.py  test_ids.py  test_onnx_export.py  test_parquet_bridge.py  test_poc.py  test_push_ingestion.py
web/: index.html  openapi.json  vite.config.mjs
web/src/: App.jsx  App.tsx  api.generated.ts  detail-content.tsx  panels.tsx  routes.ts  styles.css
(+106 files in other folders)
