[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "seccloud-poc"
version = "0.1.0"
description = "Synthetic-first PoC for BYOC insider-risk substrate and investigation workflows."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.0",
    "psycopg[binary]>=3.3.3",
    "pyarrow",
    "scikit-learn>=1.6",
    "scipy>=1.14",
    "torch>=2.6",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
onnx = [
    "onnx>=1.17",
    "onnxruntime>=1.20",
]

[project.scripts]
seccloud = "seccloud.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "httpx>=0.28",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "ruff>=0.15.6",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["E402"]
