[workspace]
resolver = "2"
members = [
    "crates/seccloud-pipeline",
    "crates/seccloud-lake",
    "crates/seccloud-ingestion",
    "crates/seccloud-collector",
    "crates/seccloud-loadtest",
]

[workspace.package]
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
axum = "0.8"
bytes = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
flate2 = "1"
seccloud-lake = { path = "crates/seccloud-lake" }
seccloud-pipeline = { path = "crates/seccloud-pipeline" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tower-http = { version = "0.6", features = ["limit", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1", features = ["v7"] }

arrow = { version = "54", default-features = false }
parquet = { version = "54", default-features = false, features = ["arrow", "snap", "zstd"] }

aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"
aws-sdk-dynamodb = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
toml = "0.8"
