[package]
name = "seccloud-collector"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "seccloud-collector"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
seccloud-lake.workspace = true
seccloud-pipeline.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["time", "sync"] }
tracing.workspace = true
tracing-subscriber = { workspace = true }
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
tokio.workspace = true
