[package]
name = "seccloud-ingestion"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "seccloud-gateway"
path = "src/main.rs"

[[bin]]
name = "seccloud-normalizer"
path = "src/bin/seccloud-normalizer.rs"

[[bin]]
name = "seccloud-source-stats"
path = "src/bin/seccloud-source-stats.rs"

[[bin]]
name = "seccloud-features"
path = "src/bin/seccloud-features.rs"

[[bin]]
name = "seccloud-detections"
path = "src/bin/seccloud-detections.rs"

[[bin]]
name = "seccloud-detection-compare"
path = "src/bin/seccloud-detection-compare.rs"

[[bin]]
name = "seccloud-detection-eval"
path = "src/bin/seccloud-detection-eval.rs"

[[bin]]
name = "seccloud-detection-threshold-sweep"
path = "src/bin/seccloud-detection-threshold-sweep.rs"

[[bin]]
name = "seccloud-projector"
path = "src/bin/seccloud-projector.rs"

[[bin]]
name = "seccloud-service-once"
path = "src/bin/seccloud-service-once.rs"

[[bin]]
name = "seccloud-service-loop"
path = "src/bin/seccloud-service-loop.rs"

[dependencies]
anyhow.workspace = true
arrow.workspace = true
async-trait.workspace = true
axum.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
flate2.workspace = true
ndarray = "0.16"
ort = { version = "=2.0.0-rc.10" }
seccloud-lake.workspace = true
seccloud-pipeline.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
axum-test = "17"
tempfile = "3"
