[package]
name = "seccloud-loadtest"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "seccloud-loadtest"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
flate2.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
